# source-lens

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md
.superpowers/sdd/: progress.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_init.py  002_add_repositories.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  health.py  repos.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py
backend/app/core/: __init__.py  config.py  constants.py
backend/app/database/: __init__.py  engine.py
backend/app/models/: __init__.py  base.py  indexed_file.py  repository.py  user.py
backend/app/repository/: __init__.py  github.py
backend/app/schemas/: __init__.py  auth.py  repository.py  user.py
backend/app/services/: repository_service.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_health.py
docs/superpowers/plans/: 2026-07-12-project-setup.md
frontend/: Dockerfile  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: AuthGuard.tsx  AuthProvider.tsx  Navbar.tsx
frontend/components/dashboard/: AddRepoDialog.tsx  NewChatDialog.tsx
frontend/components/ui/: alert-dialog.tsx
frontend/lib/: store.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
